<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PintaFunciones</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cosine">Cosine</string>
    <string name="sine">Seno</string>
    <string name="pintar">Pintar</string>
    <string name="xinicial">X inicial:</string>
    <string name="xfinal">X final:</string>
    <string name="yfinal">Y maxima:</string>
    <string name="yinicial">Y minima</string>
    <string name="punto">0.01</string>
    <string name="yinicialn">-1.5</string>
    <string name="yfinaln">1.5</string>
    <string name="cero">0</string>
    <string name="mdiez">-10</string>
    <string name="diez">10</string>
    <color name="gray">#d3d3d3</color>

</resources>
